--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -7,7 +7,9 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "lib": [ "es2015", "dom" ],
-    "noImplicitAny": true,
     "suppressImplicitAnyIndexErrors": true
-  }
+  },
+  "exclude" : [
+    "node_modules/**/*.ts"
+  ]
 }
