--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "angular-quickstart",
+  "name": "go-web-gallery",
   "version": "1.0.0",
-  "description": "QuickStart package.json from the documentation, supplemented with testing support",
+  "description": "Web Gallery for Show Angular Component",
   "scripts": {
     "build": "tsc -p src/",
     "build:watch": "tsc -p src/ -w",
@@ -24,40 +24,52 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "~2.4.0",
-    "@angular/compiler": "~2.4.0",
-    "@angular/core": "~2.4.0",
-    "@angular/forms": "~2.4.0",
-    "@angular/http": "~2.4.0",
-    "@angular/platform-browser": "~2.4.0",
-    "@angular/platform-browser-dynamic": "~2.4.0",
-    "@angular/router": "~3.4.0",
-
-    "angular-in-memory-web-api": "~0.2.4",
-    "systemjs": "0.19.40",
+    "@angular/animations": "~4.0.0",
+    "@angular/common": "~4.0.0",
+    "@angular/compiler": "~4.0.0",
+    "@angular/core": "~4.0.0",
+    "@angular/forms": "~4.0.0",
+    "@angular/http": "~4.0.0",
+    "@angular/platform-browser": "~4.0.0",
+    "@angular/platform-browser-dynamic": "~4.0.0",
+    "@angular/router": "~4.0.0",
+    "angular-in-memory-web-api": "~0.3.0",
+    "angular2-image-popup": "^1.1.2",
+    "bootstrap": "^4.0.0-alpha.5",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "~3.1.1",
+    "ng-sidebar": "^3.4.2",
+    "ng2-auto-complete": "^0.12.0",
+    "ng2-bootstrap": "^1.6.0",
+    "ng2-charts": "^1.5.0",
+    "ng2-select": "^1.2.0",
+    "ng2-table": "^1.3.2",
+    "numeral": "^2.0.6",
+    "primeng": "^4.0.0-rc.2",
     "rxjs": "5.0.1",
-    "zone.js": "^0.7.4"
+    "systemjs": "0.19.40",
+    "tether": "~1.3.7",
+    "tinymce": "^4.5.5",
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "concurrently": "^3.2.0",
-    "lite-server": "^2.2.2",
-    "typescript": "~2.0.10",
-
+    "@types/jasmine": "2.5.36",
+    "@types/node": "^6.0.46",
     "canonical-path": "0.0.2",
-    "tslint": "^3.15.1",
-    "lodash": "^4.16.4",
+    "concurrently": "^3.2.0",
     "jasmine-core": "~2.4.1",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "lite-server": "^2.2.2",
+    "lodash": "^4.16.4",
     "protractor": "~4.0.14",
     "rimraf": "^2.5.4",
-
-    "@types/node": "^6.0.46",
-    "@types/jasmine": "2.5.36"
+    "tslint": "^3.15.1",
+    "typescript": "~2.1.0"
   },
   "repository": {}
 }
