--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ src/**/*.js
 src/**/*.js.map
 !src/systemjs.config.extras.js
 !src/systemjs.config.js
+!src/dist/*.js
 *.js.map
 e2e/**/*.js
 e2e/**/*.js.map
