--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ npm-debug.log
 debug.log
 src/**/*.js
 src/**/*.js.map
+!src/systemjs-angular-loader.js
 !src/systemjs.config.extras.js
 !src/systemjs.config.js
 !src/dist/*.js
