--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -7,7 +7,8 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "lib": [ "es2015", "dom" ],
-    "suppressImplicitAnyIndexErrors": true
+    "suppressImplicitAnyIndexErrors": true,
+    "outDir": "build"
   },
   "exclude" : [
     "node_modules/**/*.ts"
