--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -8,7 +8,7 @@
     "experimentalDecorators": true,
     "lib": [ "es2015", "dom" ],
     "suppressImplicitAnyIndexErrors": true,
-    "outDir": "build"
+    "outDir": "../build"
   },
   "exclude" : [
     "node_modules/**/*.ts"
