--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -7,8 +7,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "lib": [ "es2015", "dom" ],
-    "suppressImplicitAnyIndexErrors": true,
-    "outDir": "../build"
+    "suppressImplicitAnyIndexErrors": true
   },
   "exclude" : [
     "node_modules/**/*.ts"
