--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "tsc -p src/",
     "build:watch": "tsc -p src/ -w",
     "build:e2e": "tsc -p e2e/",
+    "build:prd": "tsc -p src/tsconfig-build.json",
     "serve": "lite-server -c=bs-config.json",
     "serve:e2e": "lite-server -c=bs-config.e2e.json",
     "prestart": "npm run build",
@@ -47,6 +48,8 @@
     "awesome-typescript-loader": "^3.1.3",
     "canonical-path": "0.0.2",
     "concurrently": "^3.2.0",
+    "grunt": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
     "html-loader": "^0.4.5",
     "jasmine-core": "~2.4.1",
     "karma": "^1.3.0",
