--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,13 @@ src/.sonar/*
 !src/systemjs-angular-loader.js
 !src/systemjs.config.extras.js
 !src/systemjs.config.js
+!src/systemjs.config.prd.js
 !src/dist/*.js
 *.js.map
-!build/**/*.js
-!build/**/*.js.map
+!build_test/**/*.js
+!build_test/**/*.js.map
+!build_prd/**/*.js
+!build_prd/**/*.js.map
 e2e/**/*.js
 e2e/**/*.js.map
 _test-output
